tests/reference/julia-subroutine2-b1f9ea8.stderr
semantic error: Subroutine already defined
 --> tests/subroutine2.f90:1:1 - 5:1
  |
1 |    subroutine g
  |    ^^^^^^^^^^^^...
...
  |
5 |    
  | ...^ 
